# lcurve_re

./: .gitignore  .lcurve_config_session.pkl  CMakeLists.txt  README.md  config.json  config_report.aux  config_report.out  config_report.tex  install_manifest.txt  j0658.json  j0658_chain_out.txt  j0658_output.txt  j0658_output.txt.json  lcurve_simplex  lcurve_visualize  lm_iter_log.txt  main.cpp  model_file  output.txt  output.txt.json  tess_lc_space.txt
Testing/FBS1531/: config.json  output.txt.json
build-reldbg/: compile_commands.json
example/: example.json  example_lc.txt  output_investigate
new_scripts/: cornerplot.py  generate_config.py  levmarq_solver.cpp  mcmc_solver.cpp  simplex.cpp  test.cpp  visualize.cpp
scripts/: generate_prompt.py
src/: amoeba.cpp  bsstep.cpp  byte_swap.cpp  chain_stats.h  dbrent.cpp  grid_cache.h  lcurve.cpp  lcurve.h  mass_ratio_pdf.cpp  mass_ratio_pdf.h  mmid.cpp  model.cpp  model.h  new_helpers.cpp  new_helpers.h  new_subs.cpp  new_subs.h  physical_prior.h  pzextr.cpp  report_writer.h  roche.cpp  roche.h  stoerm.cpp  svdfit.cpp
src/lcurve_base/: array1d.h  buffer2d.h  comp_gravity.cpp  comp_light.cpp  comp_light_cuda.cu  comp_light_cuda.h  comp_light_flat.cpp  comp_radius.cpp  constants.h  disc_eclipse.cpp  lcurve.cpp  lcurve.h  ldc.h  light_curve_comp.cpp  light_curve_comp_fast.cpp  model.cpp  numface.cpp  re_scale.cpp  set_bright_spot_grid.cpp  set_disc_continuum.cpp  set_disc_grid.cpp  set_star_continuum.cpp  set_star_grid.cpp  set_star_grid_cuda.cu  set_star_grid_cuda.h  star_eclipse.cpp
src/lroche_base/: drpot.cpp  face.cpp  fblink.cpp  gsint.cpp  ingress_egress.cpp  pot_min.cpp  ref_sphere.cpp  rocacc.cpp  roche.cpp  roche.h  rpot.cpp  rpot_grad.cpp  rpot_val.cpp  rpot_val_grad.cpp  set_earth.cpp  sphere_eclipse.cpp  stradv.cpp  strining.cpp  xl1.cpp
src/new_scripts/: mcmc_solver.cpp
